--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
     "inuit-defaults": "~0.2.1",
     "inuit-responsive-settings": "~0.1.2",
     "inuit-responsive-tools": "~0.1.1",
-    "inuit-widths": "~0.3.1",
+    "px-widths-design": "git://github.sw.ge.com/pxc/px-widths-design.git#master"
     "px-functions-design": "git://github.sw.ge.com/pxc/px-functions-design.git#master"
   }
 }
