--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "px-widths-responsive-design",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "The Predix Experience widths-responsive module is an extension of the default widths module",
   "private": true,
   "scripts": {
@@ -13,11 +13,11 @@
   "author": "General Electric",
   "license": "Apache 2",
   "devDependencies": {
-    "glob": "^4.3.1",
+    "glob": "^5.0.10",
     "grunt": "^0.4.5",
-    "grunt-sassdoc": "~2.0.0"
+    "grunt-sassdoc": "^2.0.1"
   },
   "dependencies": {
-    "load-grunt-tasks": "^1.0.0"
+    "load-grunt-tasks": "^3.2.0"
   }
 }
