--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "px-widths-responsive-design",
-    "version": "0.4.1",
+    "version": "0.4.2",
     "description": "The Predix Experience widths-responsive module is an extension of the default widths module",
     "private": false,
     "scripts": {
@@ -12,11 +12,23 @@
     },
     "author": "General Electric",
     "devDependencies": {
-        "glob": "^5.0.10",
-        "grunt": "^0.4.5",
-        "grunt-sassdoc": "^2.0.1"
-    },
-    "dependencies": {
-        "load-grunt-tasks": "^3.2.0"
+        "browser-sync": "^2.13.0",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^3.1.0",
+        "gulp-bump": "^2.4.0",
+        "gulp-clean": "^0.3.2",
+        "gulp-concat": "^2.6.0",
+        "gulp-cssmin": "^0.1.7",
+        "gulp-if": "^2.0.1",
+        "gulp-load-plugins": "^1.2.4",
+        "gulp-match": "^1.0.2",
+        "gulp-rename": "^1.2.2",
+        "gulp-sass": "^2.3.2",
+        "gulp-sequence": "^0.4.5",
+        "gulp-style-modules": "^0.1.0",
+        "node-sass-import-once": "^1.2.0",
+        "sassdoc": "^2.1.20",
+        "stream-combiner2": "^1.1.1",
+        "yargs": "^6.0.0"
     }
 }
