attempt to fix travis ghp

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,6 @@ node_js:
 branches:
   except:
   - gh-pages
-addons:
-  firefox: latest
-  apt:
-    sources:
-    - google-chrome
-    packages:
-    - google-chrome-stable
 before_script:
 - npm install bower
 - export PATH=$PWD/node_modules/.bin:$PATH
@@ -20,6 +13,8 @@ before_script:
 script:
 - echo "This design module has no tests"
 after_success:
+- if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then openssl aes-256-cbc -k "$DEPLOYSECRET"
+  -in deploy.enc -out deploy_key -d; fi
 - cd $TRAVIS_BUILD_DIR/scripts
 - chmod 755 ghp.sh
 - "./ghp.sh"
