--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "px-widths-responsive-design",
-  "version": "1.0.5",
   "description": "The Predix Experience widths-responsive module is an extension of the default widths module",
-  "private": false,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "keywords": [
+    "sass",
+    "px",
+    "responsive",
+    "widths"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/PredixDev/px-widths-responsive-design.git"
+  },
+  "homepage": "https://github.com/PredixDev/px-widths-responsive-design.git",
+  "name": "px-widths-responsive-design",
+  "version": "1.0.5",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "General Electric",
   "devDependencies": {
@@ -32,5 +38,12 @@
     "stream-combiner2": "^1.1.1",
     "yargs": "^6.0.0"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "resolutions": {
+    "inherits": "2.0.3",
+    "samsam": "1.1.3",
+    "supports-color": "3.1.2",
+    "type-detect": "1.0.0"
+  },
+  "dependencies": {}
 }
